# RustLearning

./: .gitignore  README.md  rust_project.code-workspace
bevy_game_1/: Cargo.toml  REAME.md
bevy_game_1/src/: main.rs
dungeon_crawling/: .gitignore  Cargo.toml
dungeon_crawling/src/: lib.rs  main.rs  save.rs
dungeon_crawling/src/engine/: components.rs  drawing.rs  game.rs  map.rs  mod.rs  utils.rs
dungeon_crawling/src/game/: core.rs
guess_num_game/: Cargo.toml
guess_num_game/src/: main.rs
guess_word_game/: .gitignore  Cargo.toml  README.md  scrape_images.bat
guess_word_game/python/: scrapeanimaldatas.py
guess_word_game/src/: animal_datas.json  main.rs
guess_word_game/src/python/: scrapeanimaldatas.py  scrapeanimalimages.py
procedural_game_1/: Cargo.toml
procedural_game_1/.cargo/: config_fast_builds.toml
procedural_game_1/src/: main.rs
rust_godot_game_1/godot/: icon.svg.import  mainworld.tscn  player.tscn  project.godot  rustbinding.gdextension
rust_godot_game_1/godot/assets/textures/Animals/: elephant.png.import  giraffe.png.import  hippo.png.import  monkey.png.import  panda.png.import  parrot.png.import  penguin.png.import  pig.png.import  rabbit.png.import  snake.png.import
rust_godot_game_1/godot/assets/textures/SpriteSheets/: square.png.import  square.xml
rust_godot_game_1/rust/rustgodotlib/: .gitattributes  Cargo.toml
rust_godot_game_1/rust/rustgodotlib/src/: entity.rs  lib.rs  player.rs  world.rs
