[package]
name = "dungeon_crawling"
version = "0.1.0"
authors = ["Nguyen Phi Hung <josephkirk.art@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
nalgebra = "0.18"
ncollide2d = "0.20"
nphysics2d = "0.12"