[package]
name = "dungeon_crawling"
version = "0.1.0"
authors = ["Nguyen Phi Hung <josephkirk.art@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
rltk = "0"
specs = "0"
specs-derive = "0"
log = { version = "0.4", features = ["std", "serde","max_level_debug", "release_max_level_warn"] }