[package]
name = "procedural_game_1"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy="0.14"
rand="0.8"
strum = { version = "0.26", features = ["derive"] }

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 1

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false