[package]
name = "procedural_game_1"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14", features = ["wayland"] }
# Disable low-severity logs at compile time for performance.
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
rand="0.8"
strum = { version = "0.26", features = ["derive"] }

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 1

[profile.release]
lto = "thin"
opt-level = 3
codegen-units = 1
incremental = false
debug = false
strip = "none"